@@ -1,6 +1,9 @@
 Changes since version 3.0.0
 ---------------------------
 
+- Fixed an assert that could occur during connection establishment if
+  the communicator was shutdown or destroyed concurrently.
+
 - Fixed a bug in the class garbage collector that could result in double
   deallocation of class instances.
 
